aspect/core/languages/aql/AqlParser.py
# Generated from ./aspect/core/languages/aql/Aql.g4 by ANTLR 4.6
# encoding: utf-8
from antlr4 import *
from io import StringIO



class AqlParser ( Parser ):

    grammarFileName = "Aql.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "'['", "']'", "'.@'", "'||'", "'&&'", 
                     "'|'", "'^'", "'&'", "'='", "'!='", "'=~'", "'>'", 
                     "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", 
                     "'!'", "'~'", "'true'", "'false'", "'$'", "'('", "')'", 
                     "'@'", "':'", "','", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "DESC", "ASC", "IDENTIFIER", "INTEGER", 
                      "FLOAT", "WS", "STRING_LITERAL" ]

    RULE_queryExpression = 0
    RULE_expression = 1
    RULE_navigateExpression = 2
    RULE_orExpression = 3
    RULE_andExpression = 4
    RULE_bitOrExpression = 5
    RULE_bitXorExpression = 6
    RULE_bitAndExpression = 7
    RULE_equalsExpression = 8
    RULE_plusExpression = 9
    RULE_multiplyExpression = 10
    RULE_unaryExpresion = 11
    RULE_predicateExpression = 12
    RULE_atomExpression = 13
    RULE_propertyAccess = 14
    RULE_expressionList = 15
    RULE_fieldList = 16

    ruleNames =  [ "queryExpression", "expression", "navigateExpression", 
                   "orExpression", "andExpression", "bitOrExpression", "bitXorExpression", 
                   "bitAndExpression", "equalsExpression", "plusExpression", 
                   "multiplyExpression", "unaryExpresion", "predicateExpression", 
                   "atomExpression", "propertyAccess", "expressionList", 
                   "fieldList" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    DESC=33
    ASC=34
    IDENTIFIER=35
    INTEGER=36
    FLOAT=37
    WS=38
    STRING_LITERAL=39

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class QueryExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(AqlParser.ExpressionContext,0)


        def getRuleIndex(self):
            return AqlParser.RULE_queryExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQueryExpression" ):
                return visitor.visitQueryExpression(self)
            else:
                return visitor.visitChildren(self)




    def queryExpression(self):

        localctx = AqlParser.QueryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_queryExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def navigateExpression(self):
            return self.getTypedRuleContext(AqlParser.NavigateExpressionContext,0)


        def getRuleIndex(self):
            return AqlParser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = AqlParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.navigateExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NavigateExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AqlParser.OrExpressionContext)
            else:
                return self.getTypedRuleContext(AqlParser.OrExpressionContext,i)


        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(AqlParser.IDENTIFIER)
            else:
                return self.getToken(AqlParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return AqlParser.RULE_navigateExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNavigateExpression" ):
                return visitor.visitNavigateExpression(self)
            else:
                return visitor.visitChildren(self)




    def navigateExpression(self):

        localctx = AqlParser.NavigateExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_navigateExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.orExpression()
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AqlParser.T__0 or _la==AqlParser.T__3:
                self.state = 57
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [AqlParser.T__0]:
                    self.state = 39
                    self.match(AqlParser.T__0)
                    self.state = 40
                    self.match(AqlParser.IDENTIFIER)
                    self.state = 46
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [AqlParser.T__1]:
                        self.state = 41
                        self.match(AqlParser.T__1)
                        self.state = 42
                        self.orExpression()
                        self.state = 43
                        self.match(AqlParser.T__2)
                        pass
                    elif token in [AqlParser.EOF, AqlParser.T__0, AqlParser.T__3, AqlParser.T__26, AqlParser.T__29, AqlParser.T__31]:
                        pass
                    else:
                        raise NoViableAltException(self)

                    pass
                elif token in [AqlParser.T__3]:
                    self.state = 48
                    self.match(AqlParser.T__3)
                    self.state = 49
                    self.match(AqlParser.IDENTIFIER)
                    self.state = 55
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [AqlParser.T__1]:
                        self.state = 50
                        self.match(AqlParser.T__1)
                        self.state = 51
                        self.orExpression()
                        self.state = 52
                        self.match(AqlParser.T__2)
                        pass
                    elif token in [AqlParser.EOF, AqlParser.T__0, AqlParser.T__3, AqlParser.T__26, AqlParser.T__29, AqlParser.T__31]:
                        pass
                    else:
                        raise NoViableAltException(self)

                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OrExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def andExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AqlParser.AndExpressionContext)
            else:
                return self.getTypedRuleContext(AqlParser.AndExpressionContext,i)


        def getRuleIndex(self):
            return AqlParser.RULE_orExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrExpression" ):
                return visitor.visitOrExpression(self)
            else:
                return visitor.visitChildren(self)




    def orExpression(self):

        localctx = AqlParser.OrExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_orExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.andExpression()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AqlParser.T__4:
                self.state = 63
                self.match(AqlParser.T__4)
                self.state = 64
                self.andExpression()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AndExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bitOrExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AqlParser.BitOrExpressionContext)
            else:
                return self.getTypedRuleContext(AqlParser.BitOrExpressionContext,i)


        def getRuleIndex(self):
            return AqlParser.RULE_andExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExpression" ):
                return visitor.visitAndExpression(self)
            else:
                return visitor.visitChildren(self)




    def andExpression(self):

        localctx = AqlParser.AndExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_andExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.bitOrExpression()
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AqlParser.T__5:
                self.state = 71
                self.match(AqlParser.T__5)
                self.state = 72
                self.bitOrExpression()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BitOrExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bitXorExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AqlParser.BitXorExpressionContext)
            else:
                return self.getTypedRuleContext(AqlParser.BitXorExpressionContext,i)


        def getRuleIndex(self):
            return AqlParser.RULE_bitOrExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBitOrExpression" ):
                return visitor.visitBitOrExpression(self)
            else:
                return visitor.visitChildren(self)




    def bitOrExpression(self):

        localctx = AqlParser.BitOrExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_bitOrExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.bitXorExpression()
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AqlParser.T__6:
                self.state = 79
                self.match(AqlParser.T__6)
                self.state = 80
                self.bitXorExpression()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BitXorExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bitAndExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AqlParser.BitAndExpressionContext)
            else:
                return self.getTypedRuleContext(AqlParser.BitAndExpressionContext,i)


        def getRuleIndex(self):
            return AqlParser.RULE_bitXorExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBitXorExpression" ):
                return visitor.visitBitXorExpression(self)
            else:
                return visitor.visitChildren(self)




    def bitXorExpression(self):

        localctx = AqlParser.BitXorExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_bitXorExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.bitAndExpression()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AqlParser.T__7:
                self.state = 87
                self.match(AqlParser.T__7)
                self.state = 88
                self.bitAndExpression()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BitAndExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equalsExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AqlParser.EqualsExpressionContext)
            else:
                return self.getTypedRuleContext(AqlParser.EqualsExpressionContext,i)


        def getRuleIndex(self):
            return AqlParser.RULE_bitAndExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBitAndExpression" ):
                return visitor.visitBitAndExpression(self)
            else:
                return visitor.visitChildren(self)




    def bitAndExpression(self):

        localctx = AqlParser.BitAndExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_bitAndExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.equalsExpression()
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AqlParser.T__8:
                self.state = 95
                self.match(AqlParser.T__8)
                self.state = 96
                self.equalsExpression()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EqualsExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def plusExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AqlParser.PlusExpressionContext)
            else:
                return self.getTypedRuleContext(AqlParser.PlusExpressionContext,i)


        def getRuleIndex(self):
            return AqlParser.RULE_equalsExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqualsExpression" ):
                return visitor.visitEqualsExpression(self)
            else:
                return visitor.visitChildren(self)




    def equalsExpression(self):

        localctx = AqlParser.EqualsExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_equalsExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.plusExpression()
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AqlParser.T__9) | (1 << AqlParser.T__10) | (1 << AqlParser.T__11) | (1 << AqlParser.T__12) | (1 << AqlParser.T__13) | (1 << AqlParser.T__14) | (1 << AqlParser.T__15))) != 0):
                self.state = 117
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [AqlParser.T__9]:
                    self.state = 103
                    self.match(AqlParser.T__9)
                    self.state = 104
                    self.plusExpression()
                    pass
                elif token in [AqlParser.T__10]:
                    self.state = 105
                    self.match(AqlParser.T__10)
                    self.state = 106
                    self.plusExpression()
                    pass
                elif token in [AqlParser.T__11]:
                    self.state = 107
                    self.match(AqlParser.T__11)
                    self.state = 108
                    self.plusExpression()
                    pass
                elif token in [AqlParser.T__12]:
                    self.state = 109
                    self.match(AqlParser.T__12)
                    self.state = 110
                    self.plusExpression()
                    pass
                elif token in [AqlParser.T__13]:
                    self.state = 111
                    self.match(AqlParser.T__13)
                    self.state = 112
                    self.plusExpression()
                    pass
                elif token in [AqlParser.T__14]:
                    self.state = 113
                    self.match(AqlParser.T__14)
                    self.state = 114
                    self.plusExpression()
                    pass
                elif token in [AqlParser.T__15]:
                    self.state = 115
                    self.match(AqlParser.T__15)
                    self.state = 116
                    self.plusExpression()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PlusExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplyExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AqlParser.MultiplyExpressionContext)
            else:
                return self.getTypedRuleContext(AqlParser.MultiplyExpressionContext,i)


        def getRuleIndex(self):
            return AqlParser.RULE_plusExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlusExpression" ):
                return visitor.visitPlusExpression(self)
            else:
                return visitor.visitChildren(self)




    def plusExpression(self):

        localctx = AqlParser.PlusExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_plusExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.multiplyExpression()
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AqlParser.T__16 or _la==AqlParser.T__17:
                self.state = 127
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [AqlParser.T__16]:
                    self.state = 123
                    self.match(AqlParser.T__16)
                    self.state = 124
                    self.multiplyExpression()
                    pass
                elif token in [AqlParser.T__17]:
                    self.state = 125
                    self.match(AqlParser.T__17)
                    self.state = 126
                    self.multiplyExpression()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MultiplyExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unaryExpresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AqlParser.UnaryExpresionContext)
            else:
                return self.getTypedRuleContext(AqlParser.UnaryExpresionContext,i)


        def getRuleIndex(self):
            return AqlParser.RULE_multiplyExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplyExpression" ):
                return visitor.visitMultiplyExpression(self)
            else:
                return visitor.visitChildren(self)




    def multiplyExpression(self):

        localctx = AqlParser.MultiplyExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_multiplyExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.unaryExpresion()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AqlParser.T__18 or _la==AqlParser.T__19:
                self.state = 137
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [AqlParser.T__18]:
                    self.state = 133
                    self.match(AqlParser.T__18)
                    self.state = 134
                    self.unaryExpresion()
                    pass
                elif token in [AqlParser.T__19]:
                    self.state = 135
                    self.match(AqlParser.T__19)
                    self.state = 136
                    self.unaryExpresion()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UnaryExpresionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def predicateExpression(self):
            return self.getTypedRuleContext(AqlParser.PredicateExpressionContext,0)


        def getRuleIndex(self):
            return AqlParser.RULE_unaryExpresion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryExpresion" ):
                return visitor.visitUnaryExpresion(self)
            else:
                return visitor.visitChildren(self)




    def unaryExpresion(self):

        localctx = AqlParser.UnaryExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_unaryExpresion)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AqlParser.T__17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.match(AqlParser.T__17)
                self.state = 143
                self.predicateExpression()
                pass
            elif token in [AqlParser.T__20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.match(AqlParser.T__20)
                self.state = 145
                self.predicateExpression()
                pass
            elif token in [AqlParser.T__21]:
                self.enterOuterAlt(localctx, 3)
                self.state = 146
                self.match(AqlParser.T__21)
                self.state = 147
                self.predicateExpression()
                pass
            elif token in [AqlParser.T__22, AqlParser.T__23, AqlParser.T__24, AqlParser.T__25, AqlParser.T__27, AqlParser.T__30, AqlParser.IDENTIFIER, AqlParser.INTEGER, AqlParser.FLOAT, AqlParser.STRING_LITERAL]:
                self.enterOuterAlt(localctx, 4)
                self.state = 148
                self.predicateExpression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PredicateExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomExpression(self):
            return self.getTypedRuleContext(AqlParser.AtomExpressionContext,0)


        def orExpression(self):
            return self.getTypedRuleContext(AqlParser.OrExpressionContext,0)


        def getRuleIndex(self):
            return AqlParser.RULE_predicateExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicateExpression" ):
                return visitor.visitPredicateExpression(self)
            else:
                return visitor.visitChildren(self)




    def predicateExpression(self):

        localctx = AqlParser.PredicateExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_predicateExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.atomExpression()
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AqlParser.T__1:
                self.state = 152
                self.match(AqlParser.T__1)
                self.state = 153
                self.orExpression()
                self.state = 154
                self.match(AqlParser.T__2)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AtomExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LITERAL(self):
            return self.getToken(AqlParser.STRING_LITERAL, 0)

        def INTEGER(self):
            return self.getToken(AqlParser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(AqlParser.FLOAT, 0)

        def IDENTIFIER(self):
            return self.getToken(AqlParser.IDENTIFIER, 0)

        def fieldList(self):
            return self.getTypedRuleContext(AqlParser.FieldListContext,0)


        def expression(self):
            return self.getTypedRuleContext(AqlParser.ExpressionContext,0)


        def expressionList(self):
            return self.getTypedRuleContext(AqlParser.ExpressionListContext,0)


        def propertyAccess(self):
            return self.getTypedRuleContext(AqlParser.PropertyAccessContext,0)


        def getRuleIndex(self):
            return AqlParser.RULE_atomExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomExpression" ):
                return visitor.visitAtomExpression(self)
            else:
                return visitor.visitChildren(self)




    def atomExpression(self):

        localctx = AqlParser.AtomExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_atomExpression)
        self._la = 0 # Token type
        try:
            self.state = 187
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.match(AqlParser.T__22)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.match(AqlParser.T__23)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 160
                self.match(AqlParser.STRING_LITERAL)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 161
                self.match(AqlParser.INTEGER)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 162
                self.match(AqlParser.FLOAT)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 163
                self.match(AqlParser.T__24)
                self.state = 164
                self.match(AqlParser.IDENTIFIER)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 165
                self.fieldList()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 166
                self.match(AqlParser.T__25)
                self.state = 167
                self.expression()
                self.state = 168
                self.match(AqlParser.T__26)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 170
                self.match(AqlParser.IDENTIFIER)
                self.state = 177
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [AqlParser.T__25]:
                    self.state = 171
                    self.match(AqlParser.T__25)
                    self.state = 173
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AqlParser.T__17) | (1 << AqlParser.T__20) | (1 << AqlParser.T__21) | (1 << AqlParser.T__22) | (1 << AqlParser.T__23) | (1 << AqlParser.T__24) | (1 << AqlParser.T__25) | (1 << AqlParser.T__27) | (1 << AqlParser.T__30) | (1 << AqlParser.IDENTIFIER) | (1 << AqlParser.INTEGER) | (1 << AqlParser.FLOAT) | (1 << AqlParser.STRING_LITERAL))) != 0):
                        self.state = 172
                        self.expressionList()


                    self.state = 175
                    self.match(AqlParser.T__26)
                    pass
                elif token in [AqlParser.EOF, AqlParser.T__0, AqlParser.T__1, AqlParser.T__2, AqlParser.T__3, AqlParser.T__4, AqlParser.T__5, AqlParser.T__6, AqlParser.T__7, AqlParser.T__8, AqlParser.T__9, AqlParser.T__10, AqlParser.T__11, AqlParser.T__12, AqlParser.T__13, AqlParser.T__14, AqlParser.T__15, AqlParser.T__16, AqlParser.T__17, AqlParser.T__18, AqlParser.T__19, AqlParser.T__26, AqlParser.T__28, AqlParser.T__29, AqlParser.T__31, AqlParser.DESC, AqlParser.ASC]:
                    pass
                else:
                    raise NoViableAltException(self)

                pass
